--- a/Dummy/index.html
+++ b/Dummy/index.html
@@ -5,7 +5,7 @@
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/Box2D.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-Box837553567889740021.js"></script>
+  <script language="javascript" type="text/javascript" src="Box.js"></script>
   <script language="javascript" type="text/javascript" src="Dummy.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
