--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>My Portfolio</h1>
-    <a href="root/projects/dummy.html">Dummy</a>
+    <a href="Dummy/index.html">Dummy</a>
   </body>
 </html>
