--- a/Chess Engine/index.html
+++ b/Chess Engine/index.html
@@ -2,27 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/Box2D.js"></script>
-  <script language="javascript" type="text/javascript" src="Box.js"></script>
-  <script language="javascript" type="text/javascript" src="Dummy.js"></script>
+  <script language="javascript" type="text/javascript" src="p5js-temp-gamepieces8717120652749031501.js"></script>
+  <script language="javascript" type="text/javascript" src="p5js-temp-tiles8129136959560863511.js"></script>
+  <script language="javascript" type="text/javascript" src="p5js-temp-enginescript6324785385950793050.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    
-    canvas {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  </style>
+  <style> body { padding: 0; margin: 0; } </style>
 </head>
 
 <body>
