--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>My Portfolio</h1>
+    <a href="Chess%20Engine/index.html">Chess Engine</a>
+    <a href="Colors/index.html">Colors</a>
     <a href="Dummy/index.html">Dummy</a>
   </body>
 </html>
