--- a/Chess Engine/index.html
+++ b/Chess Engine/index.html
@@ -5,9 +5,9 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-gamepieces8717120652749031501.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-tiles8129136959560863511.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-enginescript6324785385950793050.js"></script>
+  <script language="javascript" type="text/javascript" src="gamepieces.js"></script>
+  <script language="javascript" type="text/javascript" src="tiles.js"></script>
+  <script language="javascript" type="text/javascript" src="enginescript.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
