--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
   <head>
     <title>Portfolio</title>
+    <style>
+      
+    </style>
   </head>
   <body>
     <h1>My Portfolio</h1>
-    <a href="Chess%20Engine/index.html">Chess Engine</a>
-    <a href="Colors/index.html">Colors</a>
-    <a href="Dummy/index.html">Dummy</a>
+    <ul>
+      <li><a href="Chess%20Engine/index.html">Chess Engine</a></li>
+      <li><a href="Colors/index.html">Colors</a></li>
+      <li><a href="Dummy/index.html">Dummy</a></li>
+    </ul>
   </body>
 </html>
