--- a/Dummy/index.html
+++ b/Dummy/index.html
@@ -20,6 +20,10 @@
       text-align: center;
     }
     
+    #instructions {
+      text-align: center;
+    }
+    
     canvas {
       display: block;
       margin-left: auto;
