--- a/ChessEngine/index.html
+++ b/ChessEngine/index.html
@@ -7,7 +7,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="gamepieces.js"></script>
   <script language="javascript" type="text/javascript" src="tiles.js"></script>
-  <script language="javascript" type="text/javascript" src="enginescript.js"></script>
+  <script language="javascript" type="text/javascript" src="ChessEngine.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
