--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>My Portfolio</h1>
     <ul>
-      <li><a href="Chess%20Engine/index.html">Chess Engine</a></li>
+      <li><a href="ChessEngine/index.html">Chess Engine</a></li>
       <li><a href="Colors/index.html">Colors</a></li>
       <li><a href="Dummy/index.html">Dummy</a></li>
     </ul>
