--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <h1>My Portfolio</h1>
+      <h3>By Chakrey</h3>
     <ul>
       <li><a href="ChessEngine/index.html">Chess Engine</a></li>
       <li><a href="Colors/index.html">Colors</a></li>
       <li><a href="Dummy/index.html">Dummy</a></li>
+      <li><a href="Sandbox/index.html">Sandbox</a></li>
     </ul>
   </body>
 </html>
