--- a/Sandbox/index.html
+++ b/Sandbox/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <h1>Dummy</h1>
+  <h1>Sandbox</h1>
   <script>
     var instructions = document.createElement("h3");
     var text = document.createTextNode(
