--- a/Dummy/index.html
+++ b/Dummy/index.html
@@ -6,7 +6,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/Box2D.js"></script>
   <script language="javascript" type="text/javascript" src="Box.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-Dummy9013608306428404145.js"></script>
+  <script language="javascript" type="text/javascript" src="Dummy.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
   
   <!-- This line removes any default padding and style.
