--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="ChessEngine/index.html">Chess Engine</a></li>
       <li><a href="Colors/index.html">Colors</a></li>
       <li><a href="Dummy/index.html">Dummy</a></li>
-      <li><a href="Sandbox/index.html">Sandbox</a></li>
+      <!--li><a href="Sandbox/index.html">Sandbox</a></li-->
     </ul>
   </body>
 </html>
