--- a/Dummy/index.html
+++ b/Dummy/index.html
@@ -37,7 +37,7 @@
   <script>
     var instructions = document.createElement("h3");
     var text = document.createTextNode(
-      "Instructions: Right-Click to spawn boxes. Shift and move your mouse to scroll.\n Click on the simulation area first.");
+      "Instructions: Right-Click to spawn boxes. Left-Click while hovering over a box to move it with your mouse (under development and will cause your simulation to break). Shift and move your mouse to scroll around in the simulation.\n Click on the simulation area first.");
     instructions.appendChild(text);
     instructions.id = "instructions";
     
