--- a/Dummy/index.html
+++ b/Dummy/index.html
@@ -6,7 +6,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/Box2D.js"></script>
   <script language="javascript" type="text/javascript" src="Box.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-Dummy215580046628543997.js"></script>
+  <script language="javascript" type="text/javascript" src="Dummy.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
   
   <!-- This line removes any default padding and style.
@@ -37,7 +37,7 @@
   <script>
     var instructions = document.createElement("h3");
     var text = document.createTextNode(
-      "Instructions: Right-Click to spawn boxes. Drag Left-Click while hovering over a box to move it with your mouse (under development and will cause your simulation to break). Shift and move your mouse to scroll around in the simulation.\n Click on the simulation area first.");
+      "Instructions: Select a tool by pressing keys (B for boxes, D for dragging). Click to use. Shift and move your mouse to scroll around in the simulation.\n Click on the simulation area first.");
     instructions.appendChild(text);
     instructions.id = "instructions";
     
